--- a/article.amp.html
+++ b/article.amp.html
@@ -119,7 +119,7 @@ limitations under the License.
   <!-- Start Fullpage Hero -->
   <figure class="ampstart-image-fullpage-hero m0 relative mb4">
     <amp-img width="404" height="720" layout="responsive" src="../img/article/elephants_narrow.png" media="(max-width: 415px)"></amp-img>
-    <amp-img height="720" layout="fixed-height" src="../img/article/elephants_wide.jpg" media="(min-width: 416px)"></amp-img>
+    <amp-img height="720" layout="fixed-height" src="img/landing/images/opti_agora_logo_new_c.png" media="(min-width: 416px)"></amp-img>
     <figcaption class="absolute top-0 right-0 bottom-0 left-0">
       <header class="p3">
         <h1 class="ampstart-fullpage-hero-heading mb3">
